// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs ban demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-demo-tabs__desc"
  >
    <div
      class="t-radio-group t-radio-group-medium t-radio-group-filled"
      modelvalue="normal"
    >
      
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="normal"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           常规型 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="card"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           卡片型 
          
          
        </span>
      </label>
      <div
        class="t-radio-group-filled-bg-block"
      />
      
    </div>
  </div>
  <div
    class="t-tabs"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!--v-if-->
          </transition-stub>
          <!--v-if-->
        </div>
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
              style="transform: translateX(-0px);"
            >
              
              <!--v-if-->
              
              
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      <div
        class="t-tab-panel"
      >
        
        <p
          style="padding: 25px;"
        >
          normal选项卡1内容
        </p>
        
      </div>
      <!---->
      <!---->
      
    </div>
    
  </div>
</div>
`;

exports[`Tabs base demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-tabs"
    modelvalue="first"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!--v-if-->
          </transition-stub>
          <!--v-if-->
        </div>
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
              style="transform: translateX(-0px);"
            >
              
              <!--v-if-->
              
              
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      <div
        class="t-tab-panel"
      >
        
        <p
          style="padding: 25px;"
        >
          选项卡1的内容，使用 t-tab-pannel 渲染
        </p>
        
      </div>
      <!---->
      <!---->
      
    </div>
    
  </div>
  <!-- 方式二：使用 list 定义 Tab -->
  <div
    class="t-tabs"
    modelvalue="1"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!--v-if-->
          </transition-stub>
          <!--v-if-->
        </div>
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
              style="transform: translateX(-0px);"
            >
              
              <!--v-if-->
              
              
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Tabs combination demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-demo-tabs__desc"
  >
    <div
      class="t-radio-group t-radio-group-medium t-radio-group-filled"
      modelvalue="normal"
    >
      
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="normal"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           常规型 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="card"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           卡片型 
          
          
        </span>
      </label>
      <div
        class="t-radio-group-filled-bg-block"
      />
      
    </div>
  </div>
  <div
    class="t-tabs"
    modelvalue="1"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!--v-if-->
          </transition-stub>
          <!--v-if-->
        </div>
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
              style="transform: translateX(-0px);"
            >
              
              <!--v-if-->
              
              
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      
      <div
        class="t-tab-panel"
      >
        
        <p
          style="padding: 25px;"
        >
          选项卡2
        </p>
        
      </div>
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      
      
    </div>
    
  </div>
</div>
`;

exports[`Tabs custom demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-demo-tabs__desc"
  >
    <p>
      可以动态增加选项卡，仅支持卡片型
    </p>
  </div>
  <div
    class="t-tabs"
    modelvalue="first"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!--v-if-->
          </transition-stub>
          <div
            class="t-tabs__btn t-tabs__add-btn t-size-m"
          >
            <svg
              class="t-icon t-icon-add"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M544 160L544 480 864 480 864 544 544 544 544 864 480 864 480 544 160 544 160 480 480 480 480 160 544 160Z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-tabs__nav-container t-tabs__nav--card t-is-top t-is-addable"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
              style="transform: translateX(-0px);"
            >
              
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      
      <div
        class="t-tab-panel"
      >
        
        <p
          style="padding: 25px;"
        >
          原有选项卡内容
        </p>
        
      </div>
      <!---->
      
      
    </div>
    
  </div>
</div>
`;

exports[`Tabs icon demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-demo-tabs__desc"
  >
    <div
      class="t-radio-group t-radio-group-medium t-radio-group-filled"
      modelvalue="normal"
    >
      
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="normal"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           常规型 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="card"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           卡片型 
          
          
        </span>
      </label>
      <div
        class="t-radio-group-filled-bg-block"
      />
      
    </div>
  </div>
  <div
    class="t-tabs"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!--v-if-->
          </transition-stub>
          <!--v-if-->
        </div>
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
              style="transform: translateX(-0px);"
            >
              
              <!--v-if-->
              
              
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      <div
        class="t-tab-panel"
      >
        
        <p
          style="padding: 25px;"
        >
          normal选项卡1内容
        </p>
        
      </div>
      <!---->
      <!---->
      
    </div>
    
  </div>
</div>
`;

exports[`Tabs operation demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-demo-tabs__desc"
  >
    <p>
      可以动态增加选项卡，仅支持卡片型
    </p>
  </div>
  <div
    class="t-tabs"
    modelvalue="first"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!--v-if-->
          </transition-stub>
          <div
            class="t-tabs__btn t-tabs__add-btn t-size-m"
          >
            <svg
              class="t-icon t-icon-add"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M544 160L544 480 864 480 864 544 544 544 544 864 480 864 480 544 160 544 160 480 480 480 480 160 544 160Z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-tabs__nav-container t-tabs__nav--card t-is-top t-is-addable"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
              style="transform: translateX(-0px);"
            >
              
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      
      <div
        class="t-tab-panel"
      >
        
        <p
          style="padding: 25px;"
        >
          原有选项卡内容
        </p>
        
      </div>
      <!---->
      
      
    </div>
    
  </div>
</div>
`;

exports[`Tabs position demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-demo-tabs__desc"
  >
    <div
      class="t-radio-group t-radio-group-medium t-radio-group-filled"
      modelvalue="top"
    >
      
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="top"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           top 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="right"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           right 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="bottom"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           bottom 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="left"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           left 
          
          
        </span>
      </label>
      <div
        class="t-radio-group-filled-bg-block"
      />
      
    </div>
  </div>
  <div
    class="t-tabs"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!--v-if-->
          </transition-stub>
          <!--v-if-->
        </div>
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
              style="transform: translateX(-0px);"
            >
              
              <!--v-if-->
              
              
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      <div
        class="t-tab-panel"
      >
        
        <p
          style="padding: 25px;"
        >
          选项卡1
        </p>
        
      </div>
      <!---->
      <!---->
      
    </div>
    
  </div>
</div>
`;

exports[`Tabs size demo works fine 1`] = `
<div
  class="t-demo-tabs"
>
  <div
    class="t-demo-tabs__desc"
  >
    <div
      class="t-radio-group t-radio-group-medium t-radio-group-filled"
      modelvalue="medium"
    >
      
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="medium"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           medium 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="large"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           large 
          
          
        </span>
      </label>
      <div
        class="t-radio-group-filled-bg-block"
      />
      
    </div>
  </div>
  <div
    class="t-tabs"
    modelvalue="first"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!--v-if-->
          </transition-stub>
          <!--v-if-->
        </div>
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
              style="transform: translateX(-0px);"
            >
              
              <!--v-if-->
              
              
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      <div
        class="t-tab-panel"
      >
        
        <p
          style="padding: 25px;"
        >
          选项卡1
        </p>
        
      </div>
      <!---->
      <!---->
      
    </div>
    
  </div>
  <br />
  <div
    class="t-tabs"
    modelvalue="first"
  >
    
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub>
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub>
            <!--v-if-->
          </transition-stub>
          <!--v-if-->
        </div>
        <div
          class="t-tabs__nav-container t-tabs__nav--card t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
              style="transform: translateX(-0px);"
            >
              
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      
      <div
        class="t-tab-panel"
      >
        
        <p
          style="padding: 25px;"
        >
          选项卡1
        </p>
        
      </div>
      <!---->
      <!---->
      
    </div>
    
  </div>
</div>
`;
